@startuml

class Modele{
    Sring nomModele
    int idModele
    Modele()
    Modele(String nomModele)
    Modele(Modele m)
    void ajouterPiece(Piece p)
    boolean valider()
    String toJSON()
}

class Piece{
    String nomPiece
    int idPiece
    Piece()
    Piece(String nomPiece, Modele m)
    Piece(Modele m)
    Mur getMur(int orientation)
    void ajouterMur(Mur m)
    Porte getPorte(int idPorte)
    boolean valider()
}

class Mur{
    int idMur
    int orientation
    byte[] binaireImage
    Mur(int orientation)
    Mur(Mur murDepart, Piece pieceArivee)
    Mur(int orientation, byte[] binaireImage, Piece piece, Porte[] portes)
    void setBitmap(byte[] binaireImage))
    void retirerPorte(Porte p)
    void ajouterPorte(Porte p)
    int getOrientation()

}

class Porte{
    int idPorte
    int left, right, top, bottom
    Porte()
    Porte(Porte p)
    Porte(Mur a, Rect rectangle)
    void setMurDepart(Mur mur, Rect rectangle)
    boolean valider()
}

Modele "1"--"*" Piece
Piece "1"--"4" Mur
Mur "1"--"*" Porte
Porte --"1" Piece
@enduml